Fix HTML encoding issues in index.html.

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
                         </div>
                         <p class="message-text">
                              Dear Krishnaveni,<br><br>
-                            Happy 18th Birthday to an amazing person with a inosent heart and a bright spirit.<br>
-                            As you step into adulthood, trust yourself and follow your dreams to become sarjen—the world is yours to conquer.
+                            Happy 18th Birthday to an amazing person with a innosent heart and a bright spirit.<br>
+                            As you step into adulthood, trust yourself and follow your dreams —the world is yours to conquer.
                         </p>
                         <div class="message-signature">
                             With all my love,<br>
@@ -369,4 +369,5 @@
     <!-- JavaScript -->
     <script src="script.js" defer></script>
 </body>
+
 </html>
